--- a/Nutrition2/ClientApp/src/components/index.css
+++ b/Nutrition2/ClientApp/src/components/index.css
@@ -1,6 +1,16 @@
 @font-face {
-    font-family: 'merienda-regular';
-    src: url('../../../Fonts/Merienda-Regular.ttf') format('truetype');
+    font-family: 'nunito-regular';
+    src: url('../../../Fonts/Nunito-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'nunito-bold';
+    src: url('../../../Fonts/Nunito-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'caveat-bold';
+    src: url('../../../Fonts/Caveat-Bold.ttf') format('truetype');
 }
 
 body {
@@ -8,7 +18,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: merienda-regular;
+    font-family: nunito-regular;
     color: #757574;
 }
 
@@ -22,8 +32,22 @@ code {
 
 }
 
-.breakBar{
-    height:50px;
+.shoppingButton {
+    margin-left:1rem;
+    margin-right:1rem;
+    margin-bottom:2rem;
+}
+
+.setButton {
+    text-align: center
+}
+
+.shoppingButtonBox {
+    text-align: center;
+}
+
+.breakBar {
+    height: 50px;
 }
 
 .topBarText{
@@ -36,8 +60,8 @@ code {
 }
 
 .searchBox {
-    font-family: merienda-regular;
-    color: #7E3D4F;
+    font-family: nunito-bold;
+    color: #3b3b3a;
     text-align: center;
     padding-bottom: 30px;
 }
@@ -61,3 +85,13 @@ code {
     background-color: darkolivegreen;
 }
 
+.sidebar {
+    background-color: #fff;
+    height: 100%;
+    max-width: 350px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transition: right .5s,z-index 0s .5s;
+    z-index: 1050;
+}
