--- a/Nutrition2/ClientApp/src/custom.css
+++ b/Nutrition2/ClientApp/src/custom.css
@@ -56,8 +56,6 @@ code {
 }
 
 .boxStyle {
-  /*box-shadow: 3px 3px 10px 4px #f5f5f5;
-  border-radius: 10px;*/
   text-align: center;
 }
 
@@ -68,3 +66,10 @@ code {
 .navbar-nav {
     margin-bottom: 0!important;
 }
+
+.btn-info, .btn-info:hover, .btn-info:active, .btn-info:visited, btn-info:focus {
+    background-color: #EDEB9E !important;
+    border-color: #EDEB9E !important;
+    box-shadow: 2px 2px 2px #EDEB9E !important;
+}
+
