--- a/Nutrition2/ClientApp/src/components/index.css
+++ b/Nutrition2/ClientApp/src/components/index.css
@@ -85,14 +85,20 @@ code {
     margin-left: 1rem;
     margin-bottom: 2rem;
     background-color: white;
+    border-color: #d3e1bfcf;
     font-size: 16px;
     width: 5.9rem;
     height: 1.9rem;
     position: relative;
+    color: #5c5b5f;
+}
+
+.setButtonDiv {
+    text-align: center;
 }
 
 .setButton {
-    text-align: center
+    background-color: white;
 }
 
 .shoppingButtonBox {
