--- a/Nutrition2/ClientApp/src/components/index.css
+++ b/Nutrition2/ClientApp/src/components/index.css
@@ -99,6 +99,12 @@ code {
 
 .setButton {
     background-color: white;
+    text-align: center;
+}
+
+.clearButton {
+    background-color: white;
+    float:right;
 }
 
 .shoppingButtonBox {
